--- a/smr_parameters.cfg
+++ b/smr_parameters.cfg
@@ -4,3 +4,6 @@ One_sided_EQ=0
 twoD_EQ=0
 One_sided_offset=10
 save_path=ber_SMR_1D_EQ_11tap_1DVA_ITI_25_full_offset_0_TMR_0_LDPC_9_10.txt
+SNR_start=25.0
+SNR_end=6.0
+SNR_decrement=0.1
